# basic-options-pricer-polars

./: Cargo.toml  run_tests.sh
notebooks/: polars-experimentation.ipynb
pricer_polars/: bindings.py
src/: lib.rs
tests/: test_polars_black_scholes.py
